[package]
name = "unsvg"
version = "1.1.2"
edition = "2021"
description = "A simple SVG building library."
authors = ["Tom Kunc <t.kunc@unsw.edu.au>", "Zac Kologlu", "Shrey Somaiya <shrey.somaiya@unsw.edu.au>"]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/unsvg"
homepage = "https://github.com/COMP6991UNSW/unsvg"
repository = "https://github.com/COMP6991UNSW/unsvg"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.19"
resvg = "0.35.0"
